containers/babyblue/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baby-blue
  labels:
    app: baby-blue
spec:
  replicas: 1

  selector:
    matchLabels:
      app: baby-blue

  template:
    metadata:
      labels:
        app: baby-blue

    spec:
      containers:
        - name: baby-blue
          image: ghcr.io/mlibrary/digipres/baby-blue:multi.16
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL

          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: baby-blue
  labels:
    app: baby-blue
spec:
  selector:
    app: baby-blue
  ports:
    - name: http
      port: 8000
      targetPort: http
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: baby-blue
  labels:
    app: baby-blue
spec:
  to:
    kind: Service
    name: baby-blue
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
